# final_ing_datos

./: cleaned_to_db.py  conclusiones_finales.ipynb  create_database.py  exploracion.ipynb  exportaciones.db  main.py  pyproject.toml  raw_to_cleaned.py  sqlite_database_creation.sql
